# ic-sqlite

./: .gitignore  Cargo.toml  README.md  dfx.json  flake.nix
crates/ic-sqlite/: Cargo.toml
crates/ic-sqlite/src/: lib.rs  vfs.rs
examples/ic-sqlite/: Cargo.toml  lib.rs
