[package]
name = "ic-sqlite"
version = "0.1.0"
edition = "2018"
authors = ["Paul Young <84700+paulyoung@users.noreply.github.com>"]

[lib]
# path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
icfs = { git = "https://github.com/codebase-labs/icfs.git", rev = "897e5a99f8ba31a708e8e22cf9d8440a9f0035e6" }
ic-cdk = { git = "https://github.com/dfinity/cdk-rs.git", rev = "a253119adb08929b6304d007ee0a6a37960656ed" }
log = "0.4"
pretty_env_logger = "0.4"
# rand = "0.8"
rusqlite = { version = "0.26", features = ["bundled", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite-vfs = "0.2"